Added percentages and media screen to make it more responsive

--- a/project-1-root/resume-webpage/resume-webpage.html
+++ b/project-1-root/resume-webpage/resume-webpage.html
@@ -4,24 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../../css/normalize.css" />
+    <link rel="stylesheet" href="../../css/styles.css" />
     <title>Patel Resume</title>
   </head>
   <body>
     <h1>Sunny Patel</h1>
     <h3>Navigation</h3>
     <nav class="main-navigation">
-      <ul>
-        <li>
-          <a href="../../index.html">Home Page</a>
-        </li>
-        <li>
-          <a href="../anime-webpage/anime-webpage.html">Favorite Anime Webpage</a>
-        </li>
-        <li>
-          <a href="../food-webpage/food-webpage.html">Favorite Foods Webpage</a>
-        </li>
-        <li><a href="resume-webpage.html">Resume Webpage</a></li>
-      </ul>
+      <div class="nav-container">
+        <ul>
+          <li><a href="../../index.html">Home Page</a></li>
+          <li><a href="anime-webpage.html">Favorite Anime Webpage</a></li>
+          <li>
+            <a href="../food-webpage/food-webpage.html"
+              >Favorite Foods Webpage</a
+            >
+          </li>
+          <li>
+            <a href="../resume-webpage/resume-webpage.html">Resume Webpage</a>
+          </li>
+        </ul>
+      </div>
     </nav>
     <section class="education">
       <h2>Education</h2>
