finished nav bar. Responsive and sort of centered

--- a/project-1-root/anime-webpage/anime-webpage.html
+++ b/project-1-root/anime-webpage/anime-webpage.html
@@ -9,17 +9,12 @@
     <title>Favorite Anime</title>
   </head>
   <body>
-    <h1>My Favorite Anime</h1>
-    <h3>Navigation</h3>
     <nav class="main-navigation">
       <div class="nav-container">
         <ul>
-          <li><a href="../../index.html">Home</a></li>
           <li><a href="anime-webpage.html">Favorite Anime</a></li>
           <li>
-            <a href="../food-webpage/food-webpage.html"
-              >Favorite Foods</a
-            >
+            <a href="../food-webpage/food-webpage.html">Favorite Foods</a>
           </li>
           <li>
             <a href="../resume-webpage/resume-webpage.html">Resume</a>
@@ -27,66 +22,71 @@
         </ul>
       </div>
     </nav>
-    <section class="bleach">
-      <h2>Bleach</h2>
-      <p>
-        Bleach is follows a boy named Ichigo Kuroski who becomes a soul reaper.
-      </p>
-      <p>
-        As a soul reaper he fights creates called hollows, who eat human souls.
-      </p>
-      <p>Favorite things about anime:</p>
-      <ul>
-        <li>Chracter Design</li>
-        <li>Original Soundtrack</li>
-        <li>Cast of Characters</li>
-      </ul>
-      <iframe
-        width="420"
-        height="315"
-        src="https://www.youtube.com/embed/78WIYzX_m98"
-      ></iframe>
-    </section>
-    <section class="one-piece">
-      <h2>One Piece</h2>
-      <p>One piece follows a boy named Monkey D. Luffy.</p>
-      <p>
-        Luffy wants to become the pirate king by finding the greatest treasure
-        of all, One Piece.
-      </p>
-      <p>Favorite things about anime:</p>
-      <ul>
-        <li>Immerse World</li>
-        <li>Cast of characters</li>
-        <li>Story</li>
-      </ul>
-      <iframe
-        width="420"
-        height="315"
-        src="https://www.youtube.com/embed/S8_YwFLCh4U"
-      ></iframe>
-    </section>
-    <section class="attack-on-titan">
-      <h2>Attack on Titan</h2>
-      <p>Attack on Titan follows a boy named Eren Yeagar.</p>
-      <p>
-        Eren lives in a world where humans are food for beasts called Titans
-      </p>
-      <p>
-        After seeing his mother get eaten alive by a Titan, Eren vows to
-        exterminate all Titans
-      </p>
-      <p>Favorite things about anime:</p>
-      <ul>
-        <li>Story</li>
-        <li>Main character</li>
-        <li>Original soundtrack</li>
-      </ul>
-      <iframe
-        width="420"
-        height="315"
-        src="https://www.youtube.com/embed/sxxRIKvaBO4"
-      ></iframe>
-    </section>
+    <div class="content">
+      <h1>My Favorite Anime</h1>
+      <section class="bleach">
+        <h2>Bleach</h2>
+        <p>
+          Bleach is follows a boy named Ichigo Kuroski who becomes a soul
+          reaper.
+        </p>
+        <p>
+          As a soul reaper he fights creates called hollows, who eat human
+          souls.
+        </p>
+        <p>Favorite things about anime:</p>
+        <ul>
+          <li>Chracter Design</li>
+          <li>Original Soundtrack</li>
+          <li>Cast of Characters</li>
+        </ul>
+        <iframe
+          width="420"
+          height="315"
+          src="https://www.youtube.com/embed/78WIYzX_m98"
+        ></iframe>
+      </section>
+      <section class="one-piece">
+        <h2>One Piece</h2>
+        <p>One piece follows a boy named Monkey D. Luffy.</p>
+        <p>
+          Luffy wants to become the pirate king by finding the greatest treasure
+          of all, One Piece.
+        </p>
+        <p>Favorite things about anime:</p>
+        <ul>
+          <li>Immerse World</li>
+          <li>Cast of characters</li>
+          <li>Story</li>
+        </ul>
+        <iframe
+          width="420"
+          height="315"
+          src="https://www.youtube.com/embed/S8_YwFLCh4U"
+        ></iframe>
+      </section>
+      <section class="attack-on-titan">
+        <h2>Attack on Titan</h2>
+        <p>Attack on Titan follows a boy named Eren Yeagar.</p>
+        <p>
+          Eren lives in a world where humans are food for beasts called Titans
+        </p>
+        <p>
+          After seeing his mother get eaten alive by a Titan, Eren vows to
+          exterminate all Titans
+        </p>
+        <p>Favorite things about anime:</p>
+        <ul>
+          <li>Story</li>
+          <li>Main character</li>
+          <li>Original soundtrack</li>
+        </ul>
+        <iframe
+          width="420"
+          height="315"
+          src="https://www.youtube.com/embed/sxxRIKvaBO4"
+        ></iframe>
+      </section>
+    </div>
   </body>
 </html>
