--- a/project-1-root/anime-webpage/anime-webpage.html
+++ b/project-1-root/anime-webpage/anime-webpage.html
@@ -25,26 +25,32 @@
     <div class="content">
       <h1>My Favorite Anime</h1>
       <section class="bleach">
-        <h2>Bleach</h2>
-        <p>
-          Bleach is follows a boy named Ichigo Kuroski who becomes a soul
-          reaper.
-        </p>
-        <p>
-          As a soul reaper he fights creates called hollows, who eat human
-          souls.
-        </p>
-        <p>Favorite things about anime:</p>
-        <ul>
-          <li>Chracter Design</li>
-          <li>Original Soundtrack</li>
-          <li>Cast of Characters</li>
-        </ul>
-        <iframe
-          width="420"
-          height="315"
-          src="https://www.youtube.com/embed/78WIYzX_m98"
-        ></iframe>
+        <div class="video-content">
+          <iframe
+            class="video"
+            width="420"
+            height="400"
+            src="https://www.youtube.com/embed/78WIYzX_m98"
+          ></iframe>
+        </div>
+        <div class="container-content">
+          <h2>Bleach</h2>
+
+          <p>
+            Bleach is follows a boy named Ichigo Kuroski who becomes a soul
+            reaper.
+          </p>
+          <p>
+            As a soul reaper he fights creates called hollows, who eat human
+            souls.
+          </p>
+          <p>Favorite things about anime:</p>
+          <ul>
+            <li>Chracter Design</li>
+            <li>Original Soundtrack</li>
+            <li>Cast of Characters</li>
+          </ul>
+        </div>
       </section>
       <section class="one-piece">
         <h2>One Piece</h2>
