--- a/project-1-root/anime-webpage/anime-webpage.html
+++ b/project-1-root/anime-webpage/anime-webpage.html
@@ -53,45 +53,53 @@
         </div>
       </section>
       <section class="one-piece">
-        <h2>One Piece</h2>
-        <p>One piece follows a boy named Monkey D. Luffy.</p>
-        <p>
-          Luffy wants to become the pirate king by finding the greatest treasure
-          of all, One Piece.
-        </p>
-        <p>Favorite things about anime:</p>
-        <ul>
-          <li>Immerse World</li>
-          <li>Cast of characters</li>
-          <li>Story</li>
-        </ul>
-        <iframe
-          width="420"
-          height="315"
-          src="https://www.youtube.com/embed/S8_YwFLCh4U"
-        ></iframe>
+        <div class="video-content">
+          <iframe
+            width="420"
+            height="315"
+            src="https://www.youtube.com/embed/S8_YwFLCh4U"
+          ></iframe>
+        </div>
+        <div class="container-content">
+          <h2>One Piece</h2>
+          <p>One piece follows a boy named Monkey D. Luffy.</p>
+          <p>
+            Luffy wants to become the pirate king by finding the greatest
+            treasure of all, One Piece.
+          </p>
+          <p>Favorite things about anime:</p>
+          <ul>
+            <li>Immerse World</li>
+            <li>Cast of characters</li>
+            <li>Story</li>
+          </ul>
+        </div>
       </section>
       <section class="attack-on-titan">
-        <h2>Attack on Titan</h2>
-        <p>Attack on Titan follows a boy named Eren Yeagar.</p>
-        <p>
-          Eren lives in a world where humans are food for beasts called Titans
-        </p>
-        <p>
-          After seeing his mother get eaten alive by a Titan, Eren vows to
-          exterminate all Titans
-        </p>
-        <p>Favorite things about anime:</p>
-        <ul>
-          <li>Story</li>
-          <li>Main character</li>
-          <li>Original soundtrack</li>
-        </ul>
-        <iframe
-          width="420"
-          height="315"
-          src="https://www.youtube.com/embed/sxxRIKvaBO4"
-        ></iframe>
+        <div class="video-content">
+          <iframe
+            width="420"
+            height="315"
+            src="https://www.youtube.com/embed/sxxRIKvaBO4"
+          ></iframe>
+        </div>
+        <div class="container-content">
+          <h2>Attack on Titan</h2>
+          <p>Attack on Titan follows a boy named Eren Yeagar.</p>
+          <p>
+            Eren lives in a world where humans are food for beasts called Titans
+          </p>
+          <p>
+            After seeing his mother get eaten alive by a Titan, Eren vows to
+            exterminate all Titans
+          </p>
+          <p>Favorite things about anime:</p>
+          <ul>
+            <li>Story</li>
+            <li>Main character</li>
+            <li>Original soundtrack</li>
+          </ul>
+        </div>
       </section>
     </div>
   </body>
