done some of food-webpage

--- a/project-1-root/anime-webpage/anime-webpage.html
+++ b/project-1-root/anime-webpage/anime-webpage.html
@@ -35,7 +35,6 @@
         </div>
         <div class="container-content">
           <h2>Bleach</h2>
-
           <p>
             Bleach is follows a boy named Ichigo Kuroski who becomes a soul
             reaper.
@@ -102,5 +101,5 @@
         </div>
       </section>
     </div>
-  </body>
+  </bodyc>
 </html>
