--- a/project-1-root/food-webpage/food-webpage.html
+++ b/project-1-root/food-webpage/food-webpage.html
@@ -9,17 +9,12 @@
     <title>Favorite Foods</title>
   </head>
   <body>
-    <h1>My Favorite Foods</h1>
-    <h3>Navigation</h3>
     <nav class="main-navigation">
       <div class="nav-container">
         <ul>
-          <li><a href="../../index.html">Home Page</a></li>
           <li><a href="anime-webpage.html">Favorite Anime</a></li>
           <li>
-            <a href="../food-webpage/food-webpage.html"
-              >Favorite Foods</a
-            >
+            <a href="../food-webpage/food-webpage.html">Favorite Foods</a>
           </li>
           <li>
             <a href="../resume-webpage/resume-webpage.html">Resume</a>
@@ -27,65 +22,60 @@
         </ul>
       </div>
     </nav>
-    <p>My favorite foods in order is:</p>
-    <nav class="food-side-navigation">
-      <ol class="foods-list">
-        <li><a href="#dosa">Dosa</a></li>
-        <li><a href="#samosa">Samosa</a></li>
-        <li><a href="#dates">Dates</a></li>
-      </ol>
-    </nav>
-    <section class="dosa-info">
-      <h3 id="dosa">Dosa</h3>
-      <p>
-        A Dosa is a south indian dish that ressembles a crepe. A Dosa's exterior
-        is made from a batter of ferminated rice or lentil.
-      </p>
-      <p>
-        A dosa is usually served with chutney and sambar, which are essentially
-        condimonts.
-      </p>
-      <p>There are multiple types of dosa, such as:</p>
-      <ul>
-        <li>
-          Masala Dosa: it includes Potatoes, and seasoning are served inside the
-          Dosa, adding more flavor
-        </li>
-        <li>
-          Cheese Dosa: it is served inside the Dosa, almost like a cheese
-          quesiddila
-        </li>
-        <li>Benne Dosa: translates to butter dosa.</li>
-      </ul>
-      <img
-        src="../images/dosa-image.jpg"
-        alt="an image of a Dosa with chutney, sambara and potatoes"
-      />
-    </section>
-    <section class="samosa-info">
-      <h3 id="samosa">Samosa</h3>
-      <p>A samosa is a fried or baked pastry that can contain:</p>
-      <ul>
-        <li>Potatoes</li>
-        <li>Onions</li>
-        <li>Peas</li>
-        <li>Chicken or other meats</li>
-      </ul>
-      <p>The samosa has a crunchy exterior, but a soft interior</p>
-      <p>
-        A soamosa is also typically eaten with some sort of chutney on the side
-      </p>
-      <img
-        src="../images/Webp.net-resizeimage.jpg"
-        alt="an image of a samosa with some chutney on the side"
-      />
-    </section>
-    <section class="dates-info">
-      <h3 id="dates">Dates</h3>
-      <p>Dates are a type of fruit, that are chewy and very sweet</p>
-      <p>They are also very nutritious and high in fiber</p>
-      <p>Dates are commonly brown in color</p>
-      <img src="../images/dates-image.jpg" alt="image of dates in a cup" />
-    </section>
+    <div class="page-content">
+      <h1>My Favorite Foods</h1>
+      <section class="dosa-info">
+        <h3 id="dosa">Dosa</h3>
+        <img src="../images/dosa-image.jpg" alt="an image of a dosa" />
+        <div class="food-content">
+          <p>
+            A Dosa is a south indian dish that ressembles a crepe. A Dosa's
+            exterior is made from a batter of ferminated rice or lentil.
+          </p>
+          <p>
+            A dosa is usually served with chutney and sambar, which are
+            essentially condimonts.
+          </p>
+          <p>There are multiple types of dosa, such as:</p>
+          <ul>
+            <li>
+              Masala Dosa: it includes Potatoes, and seasoning are served inside
+              the Dosa, adding more flavor
+            </li>
+            <li>
+              Cheese Dosa: it is served inside the Dosa, almost like a cheese
+              quesiddila
+            </li>
+            <li>Benne Dosa: translates to butter dosa.</li>
+          </ul>
+        </div>
+      </section>
+      <section class="samosa-info">
+        <h3 id="samosa">Samosa</h3>
+        <p>A samosa is a fried or baked pastry that can contain:</p>
+        <ul>
+          <li>Potatoes</li>
+          <li>Onions</li>
+          <li>Peas</li>
+          <li>Chicken or other meats</li>
+        </ul>
+        <p>The samosa has a crunchy exterior, but a soft interior</p>
+        <p>
+          A soamosa is also typically eaten with some sort of chutney on the
+          side
+        </p>
+        <img
+          src="../images/Webp.net-resizeimage.jpg"
+          alt="an image of a samosa with some chutney on the side"
+        />
+      </section>
+      <section class="dates-info">
+        <h3 id="dates">Dates</h3>
+        <p>Dates are a type of fruit, that are chewy and very sweet</p>
+        <p>They are also very nutritious and high in fiber</p>
+        <p>Dates are commonly brown in color</p>
+        <img src="../images/dates-image.jpg" alt="image of dates in a cup" />
+      </section>
+    </div>
   </body>
 </html>
