Added Samosa layout

--- a/project-1-root/food-webpage/food-webpage.html
+++ b/project-1-root/food-webpage/food-webpage.html
@@ -27,7 +27,7 @@
       <section class="dosa-info">
         <h3 id="dosa">Dosa</h3>
         <img src="../images/dosa-image.jpg" alt="an image of a dosa" />
-        <div class="food-content">
+        <div class="dosa-food-content">
           <p>
             A Dosa is a south indian dish that ressembles a crepe. A Dosa's
             exterior is made from a batter of ferminated rice or lentil.
@@ -52,22 +52,24 @@
       </section>
       <section class="samosa-info">
         <h3 id="samosa">Samosa</h3>
-        <p>A samosa is a fried or baked pastry that can contain:</p>
-        <ul>
-          <li>Potatoes</li>
-          <li>Onions</li>
-          <li>Peas</li>
-          <li>Chicken or other meats</li>
-        </ul>
-        <p>The samosa has a crunchy exterior, but a soft interior</p>
-        <p>
-          A soamosa is also typically eaten with some sort of chutney on the
-          side
-        </p>
         <img
           src="../images/Webp.net-resizeimage.jpg"
           alt="an image of a samosa with some chutney on the side"
         />
+        <div class="samosa-food-content">
+          <p>A samosa is a fried or baked pastry that can contain:</p>
+          <ul>
+            <li>Potatoes</li>
+            <li>Onions</li>
+            <li>Peas</li>
+            <li>Chicken or other meats</li>
+          </ul>
+          <p>The samosa has a crunchy exterior, but a soft interior</p>
+          <p>
+            A soamosa is also typically eaten with some sort of chutney on the
+            side
+          </p>
+        </div>
       </section>
       <section class="dates-info">
         <h3 id="dates">Dates</h3>
