--- a/project-1-root/food-webpage/food-webpage.html
+++ b/project-1-root/food-webpage/food-webpage.html
@@ -73,10 +73,12 @@
       </section>
       <section class="dates-info">
         <h3 id="dates">Dates</h3>
-        <p>Dates are a type of fruit, that are chewy and very sweet</p>
-        <p>They are also very nutritious and high in fiber</p>
-        <p>Dates are commonly brown in color</p>
         <img src="../images/dates-image.jpg" alt="image of dates in a cup" />
+        <div class="dates-food-content">
+          <p>Dates are a type of fruit, that are chewy and very sweet</p>
+          <p>They are also very nutritious and high in fiber</p>
+          <p>Dates are commonly brown in color</p>
+        </div>
       </section>
     </div>
   </body>
