--- a/anime-webpage/anime-webpage.html
+++ b/anime-webpage/anime-webpage.html
@@ -12,12 +12,12 @@
     <nav class="main-navigation">
       <div class="nav-container">
         <ul>
-          <li><a href="anime-webpage.html">Favorite Anime</a></li>
+          <li><a class="current" href="#">Favorite Anime</a></li>
           <li>
             <a href="../food-webpage/food-webpage.html">Favorite Foods</a>
           </li>
           <li>
-            <a href="../resume-webpage/resume-webpage.html">Resume</a>
+            <a href="../index.html">Resume</a>
           </li>
         </ul>
       </div>
