finishe designing small screen for index.html. Need to add rules to media screen now

--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
       <div class="nav-container">
         <ul>
           <li>
-            <a href="anime-webpage/anime-webpage.html"
-              >Favorite Anime</a
-            >
+            <a href="anime-webpage/anime-webpage.html">Favorite Anime</a>
           </li>
           <li>
             <a href="food-webpage/food-webpage.html">Favorite Foods</a>
@@ -29,120 +27,129 @@
     <h1>Sunny Patel Resume</h1>
     <section class="education">
       <h2>Education</h2>
-      <ul>
-        <li>Illinois Institute of Technology | Chicago, Illinois</li>
-        <li>
-          Bachelor of Science in Computer Science | Expected Graduation: May
-          2023
-        </li>
-      </ul>
-      <h4>Relevant Coursework</h4>
-      <ul>
-        <li>Software Engineering</li>
-        <li>Intermediate Software Development</li>
-        <li>Database Organization</li>
-        <li>Systems Programming</li>
-        <li>Introduction to Algorithms</li>
-      </ul>
+      <div class="list">
+        <ul>
+          <li>Illinois Institute of Technology | Chicago, Illinois</li>
+          <li>
+            Bachelor of Science in Computer Science | Expected Graduation: May
+            2023
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="skills">
       <h2>Technical Skills</h2>
-      <h4>Programming Languages</h4>
-      <ul>
-        <li>C++</li>
-        <li>Python</li>
-        <li>Java</li>
-        <li>SQL</li>
-        <li>C</li>
-      </ul>
-      <h4>Version Control</h4>
-      <ul>
-        <li>Git</li>
-      </ul>
-      <h4>Software</h4>
-      <ul>
-        <li>Visual Studio Code</li>
-        <li>Intellij IDEA</li>
-        <li>PyCharm</li>
-        <li>Visual Studio</li>
-        <li>
-          MS Office
-          <ul>
-            <li>Microsoft Word</li>
-            <li>Microsoft Excel</li>
-            <li>Microsoft Powerpoint</li>
-          </ul>
-        </li>
-      </ul>
+      <div class="skills-container">
+        <div class="left">
+          <h4>Programming Languages</h4>
+          <div class="list">
+            <ul>
+              <li>C++</li>
+              <li>Python</li>
+              <li>Java</li>
+              <li>SQL</li>
+              <li>C</li>
+            </ul>
+          </div>
+        </div>
+        <div class="middle">
+          <h4>Version Control</h4>
+          <div class="list">
+            <ul>
+              <li>Git</li>
+            </ul>
+          </div>
+        </div>
+        <div class="right">
+          <h4>Software</h4>
+          <div class="list">
+            <ul>
+              <li>Visual Studio Code</li>
+              <li>Intellij IDEA</li>
+              <li>PyCharm</li>
+              <li>Visual Studio</li>
+              <li>MS Office</li>
+            </ul>
+          </div>
+        </div>
+      </div>
     </section>
     <section class="projects">
       <h2>Personal Projects</h2>
-      <section class="huffman-tree-info">
+      <div class="huffman-tree-info">
         <h4>
           <a href="https://github.com/SPatel29/CS-430-Project">Huffman Tree</a>
         </h4>
-        <ul>
-          <li>
-            Implemented a Huffman algorithm to read a file and map characters to
-            their respective encodings
-          </li>
-          <li>Sends output to a user requested file</li>
-          <li>
-            Uses a Heap data structure to help maintain a O(log(n)) runtime
-          </li>
-          <li>Catches & handles user error</li>
-        </ul>
-      </section>
-      <section class="jdbc-info">
+        <div class="list">
+          <ul>
+            <li>
+              Implemented a Huffman algorithm to read a file and map characters
+              to their respective encodings
+            </li>
+            <li>Sends output to a user requested file</li>
+            <li>
+              Uses a Heap data structure to help maintain a O(log(n)) runtime
+            </li>
+            <li>Catches & handles user error</li>
+          </ul>
+        </div>
+      </div>
+      <div class="jdbc-info">
         <h4>
           <a href="https://github.com/SPatel29/JDBC_Personal_Project"
             >JDBC Application</a
           >
         </h4>
-        <ul>
-          <li>
-            Made a Java program that uses a PostgreSQL JDBC driver to code SQL
-            statements in Java
-          </li>
-          <li>
-            Added functionalitly such as user privilages, ability to login, and
-            a menu option for users
-          </li>
-          <li>
-            Made it seemless for users to create databases, and modify that
-            database within the program
-          </li>
-        </ul>
-      </section>
-      <section class="soduoko-game-info">
+        <div class="list">
+          <ul>
+            <li>
+              Made a Java program that uses a PostgreSQL JDBC driver to code SQL
+              statements in Java
+            </li>
+            <li>
+              Added functionalitly such as user privilages, ability to login,
+              and a menu option for users
+            </li>
+            <li>
+              Made it seemless for users to create databases, and modify that
+              database within the program
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="soduoko-game-info">
         <h4>
           <a href="https://github.com/SPatel29/Back-Tracing-Soduoko-Game"
             >Back Tracing Sudoku Game</a
           >
         </h4>
-        <ul>
-          <li>
-            Made a Python program that uses the Pygame library to develop a
-            Sudoku Game
-          </li>
-          <li>
-            The program allows the user to solve a Sudoku Game using their
-            keyboard and mouse
-          </li>
-          <li>
-            If the user is stuck, the user can let an AI to solve the puzzle for
-            them using a backtacing algorithm
-          </li>
-        </ul>
-      </section>
+        <div class="list">
+          <ul>
+            <li>
+              Made a Python program that uses the Pygame library to develop a
+              Sudoku Game
+            </li>
+            <li>
+              The program allows the user to solve a Sudoku Game using their
+              keyboard and mouse
+            </li>
+            <li>
+              If the user is stuck, the user can let an AI to solve the puzzle
+              for them using a backtacing algorithm
+            </li>
+          </ul>
+        </div>
+      </div>
     </section>
     <footer class="contact">
       <h2>Contact Me!</h2>
-      <ul>
-        <li>Email: sunnypatelc9@gmail.com</li>
-        <li><a href="https://www.linkedin.com/in/sunnyp-c9/">LinkedIn</a></li>
-        <li><a href="https://github.com/SPatel29">GitHub</a></li>
-      </ul>
+      <div class="list">
+        <ul>
+          <li><a href="mailto:sunnypatelc9@gmail.com">Email</a></li>
+          <li><a href="https://www.linkedin.com/in/sunnyp-c9/">LinkedIn</a></li>
+          <li><a href="https://github.com/SPatel29">GitHub</a></li>
+        </ul>
+      </div>
     </footer>
   </body>
 </html>
