--- a/index.html
+++ b/index.html
@@ -29,11 +29,8 @@
       <h2>Education</h2>
       <div class="list">
         <ul>
-          <li>Illinois Institute of Technology | Chicago, Illinois</li>
-          <li>
-            Bachelor of Science in Computer Science | Expected Graduation: May
-            2023
-          </li>
+          <li>Illinois Institute of Technology</li>
+          <li>Bachelor of Science in Computer Science</li>
         </ul>
       </div>
     </section>
@@ -52,7 +49,7 @@
             </ul>
           </div>
         </div>
-        <div class="middle">
+        <div class="center">
           <h4>Version Control</h4>
           <div class="list">
             <ul>
@@ -76,7 +73,7 @@
     </section>
     <section class="projects">
       <h2>Personal Projects</h2>
-      <div class="huffman-tree-info">
+      <div class="left">
         <h4>
           <a href="https://github.com/SPatel29/CS-430-Project">Huffman Tree</a>
         </h4>
@@ -94,7 +91,7 @@
           </ul>
         </div>
       </div>
-      <div class="jdbc-info">
+      <div class="center">
         <h4>
           <a href="https://github.com/SPatel29/JDBC_Personal_Project"
             >JDBC Application</a
@@ -117,7 +114,7 @@
           </ul>
         </div>
       </div>
-      <div class="soduoko-game-info">
+      <div class="right">
         <h4>
           <a href="https://github.com/SPatel29/Back-Tracing-Soduoko-Game"
             >Back Tracing Sudoku Game</a
