--- a/index.html
+++ b/index.html
@@ -79,15 +79,15 @@
         </h4>
         <div class="list">
           <ul>
-            <li>
+            <li class="just">
               Implemented a Huffman algorithm to read a file and map characters
               to their respective encodings
             </li>
-            <li>Sends output to a user requested file</li>
-            <li>
+            <li class="just">Sends output to a user requested file</li>
+            <li class="just">
               Uses a Heap data structure to help maintain a O(log(n)) runtime
             </li>
-            <li>Catches & handles user error</li>
+            <li class="just">Catches & handles user error</li>
           </ul>
         </div>
       </div>
@@ -99,15 +99,15 @@
         </h4>
         <div class="list">
           <ul>
-            <li>
+            <li class="just">
               Made a Java program that uses a PostgreSQL JDBC driver to code SQL
               statements in Java
             </li>
-            <li>
+            <li class="just">
               Added functionalitly such as user privilages, ability to login,
               and a menu option for users
             </li>
-            <li>
+            <li class="just">
               Made it seemless for users to create databases, and modify that
               database within the program
             </li>
@@ -122,15 +122,15 @@
         </h4>
         <div class="list">
           <ul>
-            <li>
+            <li class="just">
               Made a Python program that uses the Pygame library to develop a
               Sudoku Game
             </li>
-            <li>
+            <li class="just">
               The program allows the user to solve a Sudoku Game using their
               keyboard and mouse
             </li>
-            <li>
+            <li class="just">
               If the user is stuck, the user can let an AI to solve the puzzle
               for them using a backtacing algorithm
             </li>
@@ -140,13 +140,14 @@
     </section>
     <footer class="contact">
       <h2>Contact Me!</h2>
-      <div class="list">
-        <ul>
-          <li><a href="mailto:sunnypatelc9@gmail.com">Email</a></li>
-          <li><a href="https://www.linkedin.com/in/sunnyp-c9/">LinkedIn</a></li>
-          <li><a href="https://github.com/SPatel29">GitHub</a></li>
+      <div class="contact-container">
+         <ul>
+          <li class="left"><a href="mailto:sunnypatelc9@gmail.com">Email</a></li>
+          <li class="center"><a href="https://www.linkedin.com/in/sunnyp-c9/">LinkedIn</a></li>
+          <li class="right"><a href="https://github.com/SPatel29">GitHub</a></li>
         </ul>
       </div>
+       
     </footer>
   </body>
 </html>
