finished with most of layout. Still need to change colors

--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
     <link rel="stylesheet" href="css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap"
+      rel="stylesheet"
+    />
     <title>Patel Resume</title>
   </head>
   <body>
@@ -27,6 +33,7 @@
     <h1>Sunny Patel Resume</h1>
     <section class="education">
       <h2>Education</h2>
+      <table></table>
       <div class="list">
         <ul>
           <li>Illinois Institute of Technology</li>
@@ -36,6 +43,7 @@
     </section>
     <section class="skills">
       <h2>Technical Skills</h2>
+      <table></table>
       <div class="skills-container">
         <div class="left">
           <h4>Programming Languages</h4>
@@ -73,6 +81,7 @@
     </section>
     <section class="projects">
       <h2>Personal Projects</h2>
+      <table></table>
       <div class="left">
         <h4>
           <a href="https://github.com/SPatel29/CS-430-Project">Huffman Tree</a>
@@ -141,13 +150,19 @@
     <footer class="contact">
       <h2>Contact Me!</h2>
       <div class="contact-container">
-         <ul>
-          <li class="left"><a href="mailto:sunnypatelc9@gmail.com">Email</a></li>
-          <li class="center"><a href="https://www.linkedin.com/in/sunnyp-c9/">LinkedIn</a></li>
-          <li class="right"><a href="https://github.com/SPatel29">GitHub</a></li>
+        <table></table>
+        <ul>
+          <li class="left">
+            <a href="mailto:sunnypatelc9@gmail.com">Email</a>
+          </li>
+          <li class="center">
+            <a href="https://www.linkedin.com/in/sunnyp-c9/">LinkedIn</a>
+          </li>
+          <li class="right">
+            <a href="https://github.com/SPatel29">GitHub</a>
+          </li>
         </ul>
       </div>
-       
     </footer>
   </body>
 </html>
