--- a/food-webpage/food-webpage.html
+++ b/food-webpage/food-webpage.html
@@ -6,13 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../../css/normalize.css" />
     <link rel="stylesheet" href="../../css/styles.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo&display=swap"
+      rel="stylesheet"
+    />
     <title>Favorite Foods</title>
   </head>
   <body>
     <nav class="main-navigation">
       <div class="nav-container">
         <ul>
-          <li><a href="../anime-webpage/anime-webpage.html">Favorite Anime</a></li>
+          <li>
+            <a href="../anime-webpage/anime-webpage.html">Favorite Anime</a>
+          </li>
           <li>
             <a class="current" href="#">Favorite Foods</a>
           </li>
