changed samosa image name, added utf-8 code to html

--- a/anime-webpage/anime-webpage.html
+++ b/anime-webpage/anime-webpage.html
@@ -40,14 +40,14 @@
         <div class="container-content">
           <h2>Bleach</h2>
           <p>
-            Bleach is follows a boy named Ichigo Kuroski who becomes a soul
-            reaper.
+            Bleach follows a boy named Ichigo Kuroski who becomes a soul
+            reaper&#46;
           </p>
           <p>
-            As a soul reaper he fights creates called hollows, who eat human
-            souls.
+            As a soul reaper he fights creates called hollows&#44; who eat human
+            souls&#46;
           </p>
-          <p>Favorite things about anime:</p>
+          <p>Favorite things about anime&#58;</p>
           <ul>
             <li>Chracter Design</li>
             <li>Original Soundtrack</li>
@@ -65,12 +65,12 @@
         </div>
         <div class="container-content">
           <h2>One Piece</h2>
-          <p>One piece follows a boy named Monkey D. Luffy.</p>
+          <p>One piece follows a boy named Monkey D&#46; Luffy&#46;</p>
           <p>
             Luffy wants to become the pirate king by finding the greatest
-            treasure of all, One Piece.
+            treasure of all&#44; One Piece&#46;
           </p>
-          <p>Favorite things about anime:</p>
+          <p>Favorite things about anime&#58;</p>
           <ul>
             <li>Immerse World</li>
             <li>Cast of characters</li>
@@ -88,15 +88,15 @@
         </div>
         <div class="container-content">
           <h2>Attack on Titan</h2>
-          <p>Attack on Titan follows a boy named Eren Yeagar.</p>
+          <p>Attack on Titan follows a boy named Eren Yeagar&#46;</p>
           <p>
             Eren lives in a world where humans are food for beasts called Titans
           </p>
           <p>
-            After seeing his mother get eaten alive by a Titan, Eren vows to
+            After seeing his mother get eaten alive by a Titan&#44; Eren vows to
             exterminate all Titans
           </p>
-          <p>Favorite things about anime:</p>
+          <p>Favorite things about anime&#58;</p>
           <ul>
             <li>Story</li>
             <li>Main character</li>
