--- a/food-webpage/food-webpage.html
+++ b/food-webpage/food-webpage.html
@@ -35,42 +35,43 @@
         <img src="../images/dosa-image.jpg" alt="an image of a dosa" />
         <div class="dosa-food-content">
           <p>
-            A Dosa is a south indian dish that ressembles a crepe. A Dosa's
-            exterior is made from a batter of ferminated rice or lentil.
+            A Dosa is a south indian dish that ressembles a crepe&#46; A
+            Dosa&#39;s exterior is made from a batter of ferminated rice or
+            lentil&#46;
           </p>
           <p>
-            A dosa is usually served with chutney and sambar, which are
-            essentially condimonts.
+            A dosa is usually served with chutney and sambar&#44; which are
+            essentially condimonts&#46;
           </p>
-          <p>There are multiple types of dosa, such as:</p>
+          <p>There are multiple types of dosa&#44; such as&#58;</p>
           <ul>
             <li>
-              Masala Dosa: it includes Potatoes, and seasoning are served inside
-              the Dosa, adding more flavor
+              Masala Dosa&#58; it includes Potatoes&#44; and seasoning are
+              served inside the Dosa&#44; adding more flavor
             </li>
             <li>
-              Cheese Dosa: it is served inside the Dosa, almost like a cheese
-              quesiddila
+              Cheese Dosa&#58; it is served inside the Dosa&#44; almost like a
+              cheese quesiddila
             </li>
-            <li>Benne Dosa: translates to butter dosa.</li>
+            <li>Benne Dosa&#58; translates to butter dosa&#46;</li>
           </ul>
         </div>
       </section>
       <section class="samosa-info">
         <h3 id="samosa">Samosa</h3>
         <img
-          src="../images/Webp.net-resizeimage.jpg"
+          src="../images/samosa-image.jpg"
           alt="an image of a samosa with some chutney on the side"
         />
         <div class="samosa-food-content">
-          <p>A samosa is a fried or baked pastry that can contain:</p>
+          <p>A samosa is a fried or baked pastry that can contain&#58;</p>
           <ul>
             <li>Potatoes</li>
             <li>Onions</li>
             <li>Peas</li>
             <li>Chicken or other meats</li>
           </ul>
-          <p>The samosa has a crunchy exterior, but a soft interior</p>
+          <p>The samosa has a crunchy exterior&#44; but a soft interior</p>
           <p>
             A soamosa is also typically eaten with some sort of chutney on the
             side
@@ -81,7 +82,7 @@
         <h3 id="dates">Dates</h3>
         <img src="../images/dates-image.jpg" alt="image of dates in a cup" />
         <div class="dates-food-content">
-          <p>Dates are a type of fruit, that are chewy and very sweet</p>
+          <p>Dates are a type of fruit&#44; that are chewy and very sweet</p>
           <p>They are also very nutritious and high in fiber</p>
           <p>Dates are commonly brown in color</p>
         </div>
