--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
     <h1>Sunny Patel Resume</h1>
     <section class="education">
       <h2>Education</h2>
-      <table></table>
       <div class="list">
         <ul>
           <li>Illinois Institute of Technology</li>
@@ -43,13 +42,12 @@
     </section>
     <section class="skills">
       <h2>Technical Skills</h2>
-      <table></table>
       <div class="skills-container">
         <div class="left">
           <h4>Programming Languages</h4>
           <div class="list">
             <ul>
-              <li>C++</li>
+              <li>C&#43;&#43;</li>
               <li>Python</li>
               <li>Java</li>
               <li>SQL</li>
@@ -81,7 +79,6 @@
     </section>
     <section class="projects">
       <h2>Personal Projects</h2>
-      <table></table>
       <div class="left">
         <h4>
           <a href="https://github.com/SPatel29/CS-430-Project">Huffman Tree</a>
@@ -94,9 +91,9 @@
             </li>
             <li class="just">Sends output to a user requested file</li>
             <li class="just">
-              Uses a Heap data structure to help maintain a O(log(n)) runtime
+              Uses a Heap data structure to help maintain a O&#40;log&#40;n&#41;&#41; runtime
             </li>
-            <li class="just">Catches & handles user error</li>
+            <li class="just">Catches &#38; handles user error</li>
           </ul>
         </div>
       </div>
@@ -113,11 +110,11 @@
               statements in Java
             </li>
             <li class="just">
-              Added functionalitly such as user privilages, ability to login,
+              Added functionalitly such as user privilages&#44; ability to login&#44; 
               and a menu option for users
             </li>
             <li class="just">
-              Made it seemless for users to create databases, and modify that
+              Made it seemless for users to create databases&#44; and modify that
               database within the program
             </li>
           </ul>
@@ -140,7 +137,7 @@
               keyboard and mouse
             </li>
             <li class="just">
-              If the user is stuck, the user can let an AI to solve the puzzle
+              If the user is stuck&#44; the user can let an AI to solve the puzzle
               for them using a backtacing algorithm
             </li>
           </ul>
@@ -150,7 +147,6 @@
     <footer class="contact">
       <h2>Contact Me!</h2>
       <div class="contact-container">
-        <table></table>
         <ul>
           <li class="left">
             <a href="mailto:sunnypatelc9@gmail.com">Email</a>
