adding more utf-8 encoding

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       </div>
     </section>
     <footer class="contact">
-      <h2>Contact Me!</h2>
+      <h2>Contact Me&#33;</h2>
       <div class="contact-container">
         <ul>
           <li class="left">
