adding formatting changes

--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
             </li>
             <li class="just">Sends output to a user requested file</li>
             <li class="just">
-              Uses a Heap data structure to help maintain a O&#40;log&#40;n&#41;&#41; runtime
+              Uses a Heap data structure to help maintain a
+              O&#40;log&#40;n&#41;&#41; runtime
             </li>
             <li class="just">Catches &#38; handles user error</li>
           </ul>
@@ -110,12 +111,12 @@
               statements in Java
             </li>
             <li class="just">
-              Added functionalitly such as user privilages&#44; ability to login&#44; 
-              and a menu option for users
+              Added functionalitly such as user privilages&#44; ability to
+              login&#44; and a menu option for users
             </li>
             <li class="just">
-              Made it seemless for users to create databases&#44; and modify that
-              database within the program
+              Made it seemless for users to create databases&#44; and modify
+              that database within the program
             </li>
           </ul>
         </div>
@@ -137,8 +138,8 @@
               keyboard and mouse
             </li>
             <li class="just">
-              If the user is stuck&#44; the user can let an AI to solve the puzzle
-              for them using a backtacing algorithm
+              If the user is stuck&#44; the user can let an AI to solve the
+              puzzle for them using a backtacing algorithm
             </li>
           </ul>
         </div>
